adjusted minor padding issues that caused overflow/added readme

--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-
 .textContainer {
   position: absolute;
   width: 100%;
@@ -51,6 +11,22 @@
 @font-face {
   font-family: 'CustomFont';
   src: url('../src/assets/font/melloner-fun-font/MellonerFun-d1wE.ttf');
+}
+
+@media (max-width: 600px) {
+  #book-a-table {
+   padding: 0 !important;
+  }
+
+  .bookImage {
+    padding: 0 !important;
+    overflow: hidden !important;
+    margin: 0 !important;
+  }
+
+
+
+  
 }
 
 @media (max-width: 959px) {
@@ -74,7 +50,11 @@
 }
 
 
-
+@media (max-width: 1300px) {
+  .galleryImages {
+ transform: scale(.8);
+  }
+}
   
 
   
